<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="575dp"
        android:layout_height="325dp"
        android:src="@drawable/ft1"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text"
        android:gravity="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginBottom="12sp"
        android:text="@string/login" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:textColor="@color/text"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/text"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="15sp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:textColor="@color/text"
            android:hint="@string/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:text="@string/login"
        android:textColor="@color/btn_text"
        android:textSize="18sp"
        android:id="@+id/login_btn"
        android:backgroundTint="@color/btn_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/loginNow"
        android:textColor="@color/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/tap_to_register"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>