<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".activity_back">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/home2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/add"
            android:src="@drawable/weights" />

        <ImageView
            android:id="@+id/profile2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:contentDescription="@string/add"
            android:src="@drawable/user__1_" />

        <TextView
            android:id="@+id/title2"
            android:layout_width="252dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_toStartOf="@id/profile2"
            android:layout_toEndOf="@id/home2"
            android:gravity="center"
            android:text="@string/appName"
            android:textSize="35sp"
            android:textColor="@color/text"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:padding="10dp"
        android:text="@string/se"
        android:textColor="@color/text"
        android:textSize="16sp"
        android:textStyle="bold"
        android:fontFamily="serif"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="8dp"
                android:layout_marginBottom="3dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/deadlift"
                        android:src="@drawable/ba" />

                    <TextView
                        android:id="@+id/textOverlay1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/deadlift"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="8dp"
                android:layout_marginBottom="3dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/ld"
                        android:src="@drawable/bb" />

                    <TextView
                        android:id="@+id/textOverlay2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/ld"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="8dp"
                android:layout_marginBottom="3dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/chin_up"
                        android:src="@drawable/bc" />

                    <TextView
                        android:id="@+id/textOverlay3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/pull_ups"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="8dp"
                android:layout_marginBottom="3dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/sr"
                        android:src="@drawable/bd" />

                    <TextView
                        android:id="@+id/textOverlay4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/sr"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>


</LinearLayout>