<?xml version="1.0" encoding="utf-8"?>
<!--discover-activity-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:gravity="center"
    tools:context=".activity_discover">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/home2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/add"
        android:src="@drawable/home" />

    <ImageView
        android:id="@+id/profile2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:contentDescription="@string/add"
        android:src="@drawable/user__1_" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="252dp"
        android:layout_height="52dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@id/profile2"
        android:layout_toEndOf="@id/home2"
        android:gravity="center"
        android:text="@string/appName"
        android:textSize="35sp"
        android:textColor="@color/text"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/s"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:textColor="@color/text"
        android:fontFamily="serif"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="6dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/back" />

                    <TextView
                        android:id="@+id/textOverlay1"
                        android:layout_width="167dp"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="BACK WORKOUT"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="6dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/chest"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/chest" />

                    <TextView
                        android:id="@+id/textOverlay2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="CHEST WORKOUT"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="6dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/bicep"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/bicep" />

                    <TextView
                        android:id="@+id/textOverlay3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="BICEP WORKOUT"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="370dp"
                android:layout_height="185dp"
                app:cardElevation="10dp"
                android:padding="6dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="30dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/leg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/leg" />

                    <TextView
                        android:id="@+id/textOverlay4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="LEG WORKOUT"
                        android:textColor="#FFFFFF"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</LinearLayout>